<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RankingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@android:color/white"
            android:text="TOP 10"
            android:gravity="center"
            android:background="@android:color/black"
            android:textSize="20sp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        >

    <TextView
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:gravity="center_horizontal"
        android:text="@string/Image"
        android:textStyle="bold"
        android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/Name"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/Score"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rankingRecy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</FrameLayout>